tests/expectations/compiler/option/all_types.out
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'struct'
    --> compiler-test:146:5
     |
 146 |     struct SigStruct { a: signature, b: signature? }
     |     ^^^^^^
